Updates to the library:
- Refactored rounding methods
- Automated notebooks validity check
- Removed pandas dependecy
- Fixed spelling of "constraint"

--- a/manual/GPyOpt_constrained_optimization.ipynb
+++ b/manual/GPyOpt_constrained_optimization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GPyOpt: Bayesian Optimization with fixed constrains\n",
+    "# GPyOpt: Bayesian Optimization with fixed constraints\n",
     "\n",
     "### Written by Javier Gonzalez, University of Sheffield.\n",
     "\n",
@@ -17,22 +17,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will learn how to solve optimization problems with fixed constrains. We will focus on problems where the goal is to find \n",
+    "In this notebook we will learn how to solve optimization problems with fixed constraints. We will focus on problems where the goal is to find \n",
     "$$ x_{M} = \\arg \\min_{x \\in {\\mathcal X}} f(x) \\,\\, \\mbox{subject to}, $$\n",
     "\n",
     "$$c_1(x)\\leq 0 $$\n",
     "$$ \\dots $$\n",
     "$$c_m(x)\\leq 0 $$\n",
     "\n",
-    "where $f: {\\mathcal X} \\to R$ be a L-Lipschitz  continuous function defined on a compact subset ${\\mathcal X} \\subseteq R^d$ and $c_1,\\dots,c_m$ are a series of known constrains that determine the feasible region of the problem. We will see the syntax that we need to use to solve this problems with Bayesian Optimization using GPyOpt. First we start loading GPyOpt and GPy."
+    "where $f: {\\mathcal X} \\to R$ be a L-Lipschitz  continuous function defined on a compact subset ${\\mathcal X} \\subseteq R^d$ and $c_1,\\dots,c_m$ are a series of known constraints that determine the feasible region of the problem. We will see the syntax that we need to use to solve this problems with Bayesian Optimization using GPyOpt. First we start loading GPyOpt and GPy."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%pylab inline\n",
@@ -59,7 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -70,14 +68,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagine that we were optimizing the function in the intervals $(-1,1)\\times (-1.5,1.5)$. As usual, we can defined this box constrains as:"
+    "Imagine that we were optimizing the function in the intervals $(-1,1)\\times (-1.5,1.5)$. As usual, we can defined this box constraints as:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -89,12 +87,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This will be an standard case of optimizing the function in an hypercube. However in this case we are going to study how to solve optimization problems with arbitrary constrains. In particular, we consider the problem of finding the minimum of the function in the region defined by\n",
+    "This will be an standard case of optimizing the function in an hypercube. However in this case we are going to study how to solve optimization problems with arbitrary constraints. In particular, we consider the problem of finding the minimum of the function in the region defined by\n",
     "\n",
     "$$-x_2 - .5 + |x_1| -\\sqrt{1-x_1^2} \\leq 0 $$\n",
     "$$ x_2 + .5 + |x_1| -\\sqrt{1-x_1^2} \\leq 0 $$\n",
     "\n",
-    "We can define these constrains as"
+    "We can define these constraints as"
    ]
   },
   {
@@ -105,8 +103,8 @@
    },
    "outputs": [],
    "source": [
-    "constrains = [{'name': 'constr_1', 'constrain': '-x[:,1] -.5 + abs(x[:,0]) - np.sqrt(1-x[:,0]**2)'},\n",
-    "              {'name': 'constr_2', 'constrain': 'x[:,1] +.5 - abs(x[:,0]) - np.sqrt(1-x[:,0]**2)'}]"
+    "constraints = [{'name': 'constr_1', 'constraint': '-x[:,1] -.5 + abs(x[:,0]) - np.sqrt(1-x[:,0]**2)'},\n",
+    "              {'name': 'constr_2', 'constraint': 'x[:,1] +.5 - abs(x[:,0]) - np.sqrt(1-x[:,0]**2)'}]"
    ]
   },
   {
@@ -120,26 +118,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "feasible_region = GPyOpt.Design_space(space = space, constraints = constrains)"
+    "feasible_region = GPyOpt.Design_space(space = space, constraints = constraints)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's have a look to what we have. Let's make a plot of the feasible region and the function with the original box-constrains. Note that the function .indicator_constrains(X) takes value 1 if we are in the feasible region and 0 otherwise. "
+    "Now, let's have a look to what we have. Let's make a plot of the feasible region and the function with the original box-constraints. Note that the function .indicator_constrains(X) takes value 1 if we are in the feasible region and 0 otherwise. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Grid of points to make the plots\n",
@@ -176,15 +172,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Six-Hump Camel function has two global minima. However, with the constrains that we are using, only one of the two is a valid one. We can see this by overlapping the two previous plots."
+    "The Six-Hump Camel function has two global minima. However, with the constraints that we are using, only one of the two is a valid one. We can see this by overlapping the two previous plots."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(6.5,6))\n",
@@ -208,7 +202,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -229,9 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(6.5,6))\n",
@@ -256,7 +248,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -287,7 +279,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -297,9 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "We first run the optimization for 5 steps and check how the results looks."
    ]
@@ -308,7 +298,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -325,9 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "See how the optimization is only done within the feasible region, out of it the value of the acquisition is zero, so no evaluation is selected in that region. We run 20 more iterations to see the acquisition and convergence."
    ]
@@ -336,7 +323,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -348,9 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bo.plot_acquisition()\n",
@@ -360,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Best found value\n",
@@ -372,9 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# True min\n",
@@ -383,9 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "Done! problem solved within the fixed domain!"
    ]
@@ -394,23 +373,23 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
