--- a/manual/GPyOpt_gpss_lab.ipynb
+++ b/manual/GPyOpt_gpss_lab.ipynb
@@ -124,7 +124,7 @@
     "f_true = GPyOpt.objective_examples.experiments1d.forrester()             # true function object\n",
     "f_sim = GPyOpt.objective_examples.experiments1d.forrester(sd=.1)        # noisy version\n",
     "\n",
-    "bounds = [{'name': 'var_1', 'type': 'continuous', 'domain': (0,1)}]  # problem constrains \n",
+    "bounds = [{'name': 'var_1', 'type': 'continuous', 'domain': (0,1)}]  # problem constraints \n",
     "f_objective = f_sim.f                                         # objective function   "
    ]
   },
@@ -201,7 +201,7 @@
    "source": [
     "To use BO to solve this problem, we need to create a GPyOpt object in which we need to specify the following elements: \n",
     "* The function to optimize.\n",
-    "* The box constrains of the problem.\n",
+    "* The box constraints of the problem.\n",
     "* The model, by default we use a GP with a Mattern32 kernel.\n",
     "* The acquisition function (and its parameters)."
    ]
@@ -224,7 +224,7 @@
     "# Creation of the object that we will use to run BO.\n",
     "seed(123)\n",
     "myBopt = GPyOpt.methods.BayesianOptimization(f = f_objective,        # function to optimize       \n",
-    "                                             domain = bounds,        # box-constrains of the problem\n",
+    "                                             domain = bounds,        # box-constraints of the problem\n",
     "                                             acquisition_type ='EI') # acquisition = Expected improvement"
    ]
   },
