--- a/manual/GPyOpt_initial_design.ipynb
+++ b/manual/GPyOpt_initial_design.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "import GPyOpt\n",
     "import GPy\n",
-    "from GPyOpt.util.general import *\n",
+    "from GPyOpt.experiment_design import initial_design\n",
     "import matplotlib.pyplot as plt"
    ]
   },
