--- a/manual/GPyOpt_mixed_domain.ipynb
+++ b/manual/GPyOpt_mixed_domain.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "myBopt = GPyOpt.methods.BayesianOptimization(f=func.f,                     # Objective function       \n",
-    "                                             domain=mixed_domain,          # Box-constrains of the problem\n",
+    "                                             domain=mixed_domain,          # Box-constraints of the problem\n",
     "                                             initial_design_numdata = 5,   # Number data initial design\n",
     "                                             acquisition_type='EI',        # Expected Improvement\n",
     "                                             exact_feval = True)           # True evaluations, no sample noise"
