--- a/manual/GPyOpt_reference_manual.ipynb
+++ b/manual/GPyOpt_reference_manual.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A set of box constrains, the interval [-1,1] in our case. You can define a list of dictionaries where each element defines the name, type and domain of the variables. "
+    "* A set of box constraints, the interval [-1,1] in our case. You can define a list of dictionaries where each element defines the name, type and domain of the variables. "
    ]
   },
   {
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this three pieces of information GPyOpt has enough to find the minimum of $f$ in the selected region. GPyOpt solves the problem in two steps. First, you need to create a GPyOpt object that stores the problem (f and and box-constrains). You can do it as follows."
+    "With this three pieces of information GPyOpt has enough to find the minimum of $f$ in the selected region. GPyOpt solves the problem in two steps. First, you need to create a GPyOpt object that stores the problem (f and and box-constraints). You can do it as follows."
    ]
   },
   {
@@ -407,7 +407,7 @@
     "\n",
     "# Create the true and perturbed Forrester function and the boundaries of the problem\n",
     "f_true= GPyOpt.objective_examples.experiments1d.forrester()          # noisy version\n",
-    "bounds = [{'name': 'var_1', 'type': 'continuous', 'domain': (0,1)}]  # problem constrains "
+    "bounds = [{'name': 'var_1', 'type': 'continuous', 'domain': (0,1)}]  # problem constraints "
    ]
   },
   {
@@ -457,7 +457,7 @@
     "# Creates GPyOpt object with the model and anquisition fucntion\n",
     "seed(123)\n",
     "myBopt = GPyOpt.methods.BayesianOptimization(f=f_true.f,            # function to optimize       \n",
-    "                                             domain=bounds,        # box-constrains of the problem\n",
+    "                                             domain=bounds,        # box-constraints of the problem\n",
     "                                             acquisition_type='EI',\n",
     "                                             exact_feval = True) # Selects the Expected improvement"
    ]
