--- a/manual/index.ipynb
+++ b/manual/index.ipynb
@@ -120,14 +120,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1. Bayesian optmization with arbitrary restrictions"
+    "### 5.1. Bayesian optimization with arbitrary restrictions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With GPyOpt you can solve optimization problems with arbitrary non trivial restrictions. Have a look to the notebook [GPyOpt: Bayesian Optimization with fixed constrains](./GPyOpt_constrained_optimization.ipynb) if you want to know more about how to use GPyOpt in these type of problems."
+    "With GPyOpt you can solve optimization problems with arbitrary non trivial restrictions. Have a look to the notebook [GPyOpt: Bayesian Optimization with fixed constraints](./GPyOpt_constrained_optimization.ipynb) if you want to know more about how to use GPyOpt in these type of problems."
    ]
   },
   {
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
