Fixed a few mishaps between the text and the code

--- a/manual/GPyOpt_mixed_domain.ipynb
+++ b/manual/GPyOpt_mixed_domain.ipynb
@@ -39,9 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use the **Alpine1** function, that it is available in the benchmark of functions of the package. This function is defined for arbitrary dimension. In this example we will work in dimension 5. The functional form of the Alpine1 function is:\n",
+    "We will use the **Alpine1** function, that it is available in the benchmark of functions of the package. This function is defined for arbitrary dimension. In this example we will work in dimension 9. The functional form of the Alpine1 function is:\n",
     "\n",
-    "$$f(x_1,x_2,x_3,x_4,x_5)=\\sum_{i=1}^{5} \\lvert {x_i \\sin \\left( x_i \\right) + 0.1 x_i} \\rvert$$"
+    "$$f(x_1,x_2,...,x_9)=\\sum_{i=1}^{9} \\lvert {x_i \\sin \\left( x_i \\right) + 0.1 x_i} \\rvert$$"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will consider that variables $x_1$ and $x_2$ are continuous and defined in the interval $[-5,5]$, variable $x_3$ is takes continuous values in the interval $[-1,5]$ and the variables $x_4$ and $x_5$ are discrete and take values $\\{-3,0,3\\}$ and $\\{-5,-1,1,5\\}$ respectively. Next we define this domain to use it in GPyOpt."
+    "We will consider that variables $x_1$, $x_2$ and $x_3$ are continuous and defined in the interval $[-5,5]$, variable $x_9$ is takes continuous values in the interval $[-1,2]$, variable $x_3$ is discrete and takes values $\\{3,8,10\\}$, and finally $x_4$ is categorical with three different categories. Next we define this domain to use it in GPyOpt."
    ]
   },
   {
