Correcting headers of the example notebooks.

--- a/manual/Himmelblau/Himmelblau.ipynb
+++ b/manual/Himmelblau/Himmelblau.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Himmelblau's - Unconstrained Optimization"
+    "# Himmelblau's - Unconstrained Optimization\n",
+    "\n",
+    "### Written by José Hugo Elsas, Tecgraf (PUC-Rio), BR.\n",
+    "\n",
+    "*Last updated Monday, 6 May 2019.*"
    ]
   },
   {
