--- a/manual/Mishras_Bird/Mishras_Bird_constrained.ipynb
+++ b/manual/Mishras_Bird/Mishras_Bird_constrained.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mishra's Bird - Constrained Optimization"
+    "# Mishra's Bird - Constrained Optimization\n",
+    "\n",
+    "### Written by José Hugo Elsas, Tecgraf (PUC-Rio), BR.\n",
+    "\n",
+    "*Last updated Monday, 6 May 2019.*"
    ]
   },
   {
