--- a/manual/Modular_external_objective_function_1D/Modular_External_objective_function-1D_constraint.ipynb
+++ b/manual/Modular_external_objective_function_1D/Modular_External_objective_function-1D_constraint.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modular External objective function - 1D Constraint\n",
+    "\n",
+    "### Written by José Hugo Elsas, Tecgraf (PUC-Rio), BR.\n",
+    "\n",
+    "*Last updated Monday, 6 May 2019.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
