--- a/manual/Simionescu_single_constraint/Simionescu_single_constraint.ipynb
+++ b/manual/Simionescu_single_constraint/Simionescu_single_constraint.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "# Simionescu function - One constraint\n",
     "\n",
+    "### Written by José Hugo Elsas, Tecgraf (PUC-Rio), BR.\n",
+    "\n",
+    "*Last updated Monday, 6 May 2019.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is a GPyOpt contrained optimization example for the [Simionescu function with a eight-point star constraint](https://en.wikipedia.org/wiki/Test_functions_for_optimization). There are two symmetric global minima:\n",
     "\n",
     "$f(\\pm 0.84852813,\\mp 0.84852813) = -0.072$\n",
