--- a/manual/Townsend_single_constraint/Townsend_single_constraint.ipynb
+++ b/manual/Townsend_single_constraint/Townsend_single_constraint.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "# Townsend function (modified) - One constraint\n",
     "\n",
+    "### Written by José Hugo Elsas, Tecgraf (PUC-Rio), BR.\n",
+    "\n",
+    "*Last updated Monday, 6 May 2019.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is a GPyOpt contrained optimization example for the [Townsend function with heart constraint](https://en.wikipedia.org/wiki/Test_functions_for_optimization). There is an isolated globalm minimum:\n",
     "\n",
     "$f(2.0052938,1.1944509) = -2.0239884$\n",
