--- a/manual/Rosenbrock_double_constraint/Rosenbrock_double_constraint.ipynb
+++ b/manual/Rosenbrock_double_constraint/Rosenbrock_double_constraint.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "# Rosenbrock function - Two constraints\n",
     "\n",
+    "### Written by José Hugo Elsas, Tecgraf (PUC-Rio), BR.\n",
+    "\n",
+    "*Last updated Monday, 6 May 2019.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is a GPyOpt contrained optimization example for the [Rosenbrock function with a cubic constraint and line constraint](https://en.wikipedia.org/wiki/Test_functions_for_optimization). The global minimum is:\n",
     "\n",
     "$f(1.0,1.0) = 0.0$\n",
